--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -259,9 +259,15 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 bind = $mainMod, L, exec, hyprlock
 
 # Screenshot
-bind = , PRINT, exec, hyprshot -m region
-bind = $mainMod, PRINT, exec, hyprshot -m window
-bind = $shiftMod, PRINT, exec, hyprshot -m output
+windowrulev2 = noanim, class:^(flameshot)$
+windowrulev2 = float, class:^(flameshot)$
+windowrulev2 = move 0 0, class:^(flameshot)$
+windowrulev2 = pin, class:^(flameshot)$
+windowrulev2 = monitor 0, class:^(flameshot)$
+
+# ctrl-c to copy from the flameshot gui gives warped images sometimes, but
+# setting the env fixes it
+bind = , PRINT, exec, XDG_CURRENT_DESKTOP=sway flameshot gui
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
