--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -136,7 +136,7 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
@@ -196,7 +196,12 @@ bind = $mainMod, B, exec, $browser
 windowrulev2 = float, class:(popup)
 windowrulev2 = size 700 850, class:(popup)
 
-bind = SUPER, V, exec, $terminal --class popup -e clipse  
+windowrulev2 = float, class:(countdown)
+windowrulev2 = size 720 256, class:(countdown)
+
+bind = $mainMod, I, exec, $terminal --class countdown -e termdown 11/2/2024 -f doom --no-seconds
+
+bind = $mainMod, V, exec, $terminal --class popup -e clipse  
 bind = $mainMod, A, exec, $terminal --class popup -e $ai-tui
 
 # Move focus with mainMod + arrow keys
