--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -92,10 +92,13 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba($surface0Alphaee)
+    shadow {
+    	enabled = true
+	    range = 4
+	    render_power = 3
+	    color = rgba($surface0Alphaee)
+    }
+    	
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
