Use binary version of Zen Browser

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,7 +18,7 @@ monitor=,preferred,auto,1
 $terminal = kitty
 $fileManager = nautilus
 $menu = rofi -show drun
-$browser = ~/.local/share/AppImage/ZenBrowser.AppImage
+$browser = zen-browser
 
 # AI TUI for quick questions
 $ai-tui = oatmeal
