Add toggle group binds and cleanup binds

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -185,16 +185,11 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+# Applications
 bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, F, togglefloating,
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
+bind = $mainMod, R, exec, $menu
 
 windowrulev2 = float, class:(popup)
 windowrulev2 = size 700 850, class:(popup)
@@ -202,10 +197,15 @@ windowrulev2 = size 700 850, class:(popup)
 windowrulev2 = float, class:(countdown)
 windowrulev2 = size 720 256, class:(countdown)
 
-bind = $mainMod, I, exec, $terminal --class countdown -e termdown 11/2/2024 -f doom --no-seconds
-
 bind = $mainMod, V, exec, $terminal --class popup -e clipse  
 bind = $mainMod, A, exec, $terminal --class popup -e $ai-tui
+
+# Window actions
+bind = $mainMod, C, killactive,
+bind = $mainMod, F, togglefloating,
+bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, t, toggleGroup
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -236,10 +236,6 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
