--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,16 +1,14 @@
 source=~/.config/hypr/mocha.conf
 
 background {
-    monitor = 
-    path = /home/retzer/Pictures/wallpaper.png
+    path = /home/zshzebra/Pictures/wallpaper.png
     color = $base
 
     blur_passes = 3
-    blue_size = 1
+    blur_size = 7
 }
 
 label {
-    monitor = 
     text = Welcome, $USER!
     font_size = 25
     font_family = JetBrainsMono Nerd Font Bold
@@ -21,7 +19,6 @@ label {
 }
 
 input-field {
-    monitor = 
     size = 200, 50
     rounding = 16
     inner_color = $surface0
