--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -7,6 +7,11 @@ source=~/.config/hypr/mocha.conf
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,1
 
+# Herb Urban
+monitor=HDMI-A-1,preferred,0x0,1
+monitor=eDP-1,preferred,3840x0,1
+monitor=DP-1,preferred,5760x0,1
+
 
 ###################
 ### MY PROGRAMS ###
@@ -15,13 +20,10 @@ monitor=,preferred,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = ghostty
 $fileManager = nautilus
 $menu = rofi -show drun
-$browser = zen-browser
-
-# AI TUI for quick questions
-$ai-tui = oatmeal
+$browser = librewolf
 
 #################
 ### AUTOSTART ###
@@ -32,8 +34,8 @@ $ai-tui = oatmeal
 
 # exec-once = $terminal
 # exec-once = nm-applet &
+exec-once=kdeconnect-indicator
 exec-once = waybar & hyprpaper
-exec-once =  nm-applet --indicator
 exec-once = ~/.config/hypr/scripts/sleep.sh
 exec-once = kdeconnectd
 exec-once=systemctl --user start plasma-polkit-agent
@@ -52,6 +54,8 @@ env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_QPA_PLATFORM,wayland
 
 cursor {
     no_hardware_cursors = true
@@ -67,13 +71,14 @@ cursor {
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
-    border_size = 2
+    border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = $green
     col.inactive_border = rgba($surface0Alphaee)
+    col.nogroup_border_active = rgba($surface0Alphaee)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false 
@@ -82,32 +87,6 @@ general {
     allow_tearing = false
 
     layout = dwindle
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
-decoration {
-    rounding = 10
-
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-
-    shadow {
-    	enabled = true
-	    range = 4
-	    render_power = 3
-	    color = rgba($surface0Alphaee)
-    }
-    	
-
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
-        enabled = true
-        size = 3
-        passes = 1
-        
-        vibrancy = 0.1696
-    }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
@@ -197,14 +176,14 @@ windowrulev2 = size 700 850, class:(popup)
 windowrulev2 = float, class:(countdown)
 windowrulev2 = size 720 256, class:(countdown)
 
-bind = $mainMod, V, exec, $terminal --class popup -e clipse  
-bind = $mainMod, A, exec, $terminal --class popup -e $ai-tui
+bind = $mainMod, V, exec, $terminal --class=popup -e clipse
 
 # Window actions
 bind = $mainMod, C, killactive,
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, t, toggleGroup
+bind = $mainMod, H, fullscreen
 
 
 # Move focus with mainMod + arrow keys
@@ -260,18 +239,11 @@ bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
 bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 
 # Lock
-bind = $mainMod, L, exec, hyprlock
-
-# Screenshot
-windowrulev2 = noanim, class:^(flameshot)$
-windowrulev2 = float, class:^(flameshot)$
-windowrulev2 = move 0 0, class:^(flameshot)$
-windowrulev2 = pin, class:^(flameshot)$
-windowrulev2 = monitor 0, class:^(flameshot)$
+bind = $mainMod, L, exec, waylock -init-color 0x1e1e2e -input-color 0xa6e3a1 -fail-color 0xf38ba8
 
 # ctrl-c to copy from the flameshot gui gives warped images sometimes, but
 # setting the env fixes it
-bind = , PRINT, exec, XDG_CURRENT_DESKTOP=sway flameshot gui
+bind = , PRINT, exec, hyprshot -m region
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -287,3 +259,5 @@ bind = , PRINT, exec, XDG_CURRENT_DESKTOP=sway flameshot gui
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
