--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -243,7 +243,8 @@ bind = $mainMod, L, exec, waylock -init-color 0x1e1e2e -input-color 0xa6e3a1 -fa
 
 # ctrl-c to copy from the flameshot gui gives warped images sometimes, but
 # setting the env fixes it
-bind = , PRINT, exec, hyprshot -m region
+bind = , PRINT, exec, sh -c "grim -g '$(slurp)'"
+bind = $mainMod, PRINT, exec,  sh -c "grim -g '$(slurp)' - | tesseract - stdout | wl-copy"
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -261,3 +262,7 @@ bind = , PRINT, exec, hyprshot -m region
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
+xwayland {
+    use_nearest_neighbor = false
+}
