use monitor config per device

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,17 +1,5 @@
 source=~/.config/hypr/mocha.conf
-
-################
-### MONITORS ###
-################
-
-# See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,1
-
-# Herb Urban
-monitor=HDMI-A-1,preferred,0x0,1
-monitor=eDP-1,preferred,3840x0,1
-monitor=DP-1,preferred,5760x0,1
-
+source=~/.config/hypr/monitor.conf
 
 ###################
 ### MY PROGRAMS ###
@@ -87,6 +75,20 @@ general {
     allow_tearing = false
 
     layout = dwindle
+}
+
+group {
+    col.border_active = $green
+    col.border_inactive = rgba($surface0Alphaee)
+    
+    groupbar {
+        font_size = 13
+        height = 18
+        
+        text_color = $text
+        col.active = $surface1
+        col.inactive = rgba($surface0Alphaee)
+    }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
